--- a/src/sass/libraries/_slick-theme.scss
+++ b/src/sass/libraries/_slick-theme.scss
@@ -14,7 +14,7 @@ $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
-$slick-opacity-default: .92 !default;
+$slick-opacity-default: 1 !default;
 $slick-opacity-on-hover: .75 !default;
 $slick-opacity-not-active: .2 !default;
 
@@ -58,9 +58,9 @@ $slick-opacity-not-active: .2 !default;
     background: transparent;
     color: transparent;
     top: 50%;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
+    // -webkit-transform: translate(0, -50%);
+    // -ms-transform: translate(0, -50%);
+    // transform: translate(0, -50%);
     padding: 0;
     border: none;
     outline: none;
